finished normal sql injection. added pytest. still need to update init.sql for video entries

--- a/application/blueprints/searchAPI/templates/search/search.html
+++ b/application/blueprints/searchAPI/templates/search/search.html
@@ -1,1 +1,10 @@
-{% extends "base.html" %}
+<html>
+    <head>
+        <title>Search</title>
+    </head>
+    <body>
+        <div>
+             <h1>{{data}}</h1>
+        </div>
+    </body>
+</html>
