Added blind sql injection

--- a/application/blueprints/searchAPI/templates/search/results.html
+++ b/application/blueprints/searchAPI/templates/search/results.html
@@ -1,1 +1,7 @@
-<h1>Results</h1>
+<h1>Video Search and Results</h1>
+
+<form>
+    <input type="text" id="Search" class="fadeIn second" name="Search" placeholder="Search">
+    <input type="submit" class="fadeIn third" value="Search" formmethod="post" formaction="/search/results">
+</form>
+
